# Test_3D

./: .gitignore  CMakeLists.txt  Test_3D.sln  Test_3D.vcxproj  Test_3D.vcxproj.filters  build.bat  ~AutoRecover.Test_3D.vcxproj
Old/: CMakeLists.txt
include/: Model.h  ObjParser.h  Renderer.h
src/: ObjParser.cpp  Renderer.cpp  main.cpp
